# GraphicsDemo

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  GraphicsDemo.sln  README.md
DemoShared/: AssetId.ixx  AssetPool.ixx  AssimpLoader.ixx  Camera.ixx  ColorPipeline.ixx  FontAtlas.ixx  Input.ixx  LightSourcePipeline.ixx  LightsManager.ixx  MeshAsset.ixx  MeshManager.ixx  ObjLoader.cpp  ObjLoader.ixx  PlatformUtils.ixx  RainbowTextPipeline.ixx  ReflectionPipeline.ixx  RenderObject.ixx  Scene.cpp  Scene.ixx  SkyboxPipeline.ixx  StbImage.ixx  TextMesh.ixx  TextPipeline.ixx  TexturePipeline.ixx  Vertex.ixx
DemoShared/shaders/: color.frag  color.vert  light_source.frag  light_source.vert  msdf_text.frag  msdf_text.vert  rainbow_text.frag  reflection.frag  reflection.vert  skybox.frag  skybox.vert  texture.frag  texture.vert
GraphicsDemo/: Camera.ixx  GLApp.cpp  GLApp.h  GLApp.ixx  GraphicsApi.cpp  GraphicsDemo.cpp  GraphicsDemo.vcxproj  GraphicsDemo.vcxproj.filters  GraphicsPipeline.cpp  GraphicsPipeline.ixx  Mesh.cpp  Mesh.h  Mesh.ixx  ObjLoader.cpp  ObjLoader.h  ObjLoader.ixx  PipelineBuilder.cpp  PipelineBuilder.ixx  RenderObject.cpp  RenderObject.h  RenderObject.ixx  Renderer.cpp  Renderer.h  Renderer.ixx  Scene.cpp  Scene.h  Scene.ixx  ShaderProgram.cpp  ShaderProgram.h  ShaderProgram.ixx  Texture.cpp  Texture.h  Texture.ixx  Vertex.ixx  stdafx.h
GraphicsDemo/shaders/: reflection_fs.txt  reflection_vs.txt  skybox_vs.txt  texture_fs.txt  texture_vs.txt
OpenGLDemo/: CMakeLists.txt  Camera.ixx  ColorPipeline.ixx  FontAtlas.ixx  GraphicsApi.cpp  GraphicsApi.ixx  Input.ixx  LightSourcePipeline.ixx  ObjLoader.cpp  ObjLoader.ixx  OpenGLApp.cpp  OpenGLApp.ixx  OpenGLDemo.cpp  OpenGLDemo.sln  OpenGLDemo.vcxproj  OpenGLDemo.vcxproj.filters  PlatformUtils.ixx  RainbowTextPipeline.ixx  ReflectionPipeline.ixx  Renderer.cpp  Scene.cpp  Scene.ixx  SkyboxPipeline.ixx  StbImage.ixx  TextPipeline.ixx  TexturePipeline.ixx
OpenGLDemo/shaders/: color.frag  color.vert  light_source.frag  msdf_text.frag  rainbow_text.frag  reflection.frag  reflection.vert  skybox.frag  skybox.vert  texture.frag  texture.vert
OpenGLRenderer/: Buffer.cpp  Buffer.ixx  CMakeLists.txt  GraphicsApi.cpp  GraphicsApi.ixx  GraphicsError.ixx  GraphicsPipeline.cpp  GraphicsPipeline.ixx  ImageData.ixx  Mesh.cpp  Mesh.ixx  PipelineBuilder.cpp  PipelineBuilder.ixx  RenderObject.ixx  Renderer.cpp  Renderer.ixx  Texture.cpp  Texture.ixx  Vertex.ixx  VertexLayout.ixx
VulkanDemo/: CMakeLists.txt  Camera.ixx  ColorPipeline.ixx  GraphicsApi.cpp  GraphicsApi.ixx  GraphicsPipeline.cpp  GraphicsPipeline.ixx  LightSourcePipeline.ixx  Mesh.ixx  ObjLoader.cpp  ObjLoader.ixx  PipelineBuilder.cpp  PipelineBuilder.ixx  RainbowTextPipeline.ixx  ReflectionPipeline.ixx  RenderObject.ixx  Renderer.cpp  Renderer.ixx  Scene.cpp  Scene.ixx  SkyboxPipeline.ixx  TextPipeline.ixx  Texture.cpp  Texture.ixx  TexturePipeline.ixx  Vertex.ixx  VulkanApp.cpp  VulkanApp.ixx  VulkanDemo.cpp  VulkanDemo.vcxproj  VulkanDemo.vcxproj.filters
VulkanDemo/shaders/: color.frag  color.vert  color_frag.spv  color_vert.spv  compile.bat  light_source.frag  light_source.vert  msdf_text.frag  rainbow_text.frag  reflection.frag  reflection.vert  skybox.frag  skybox.vert  skybox_frag.spv  skybox_vert.spv  texture.frag  texture.vert  texture_frag.spv
VulkanRenderer/: Buffer.cpp  Buffer.ixx  CMakeLists.txt  GraphicsApi.cpp  GraphicsApi.ixx  GraphicsError.ixx  GraphicsPipeline.cpp  GraphicsPipeline.ixx  Mesh.cpp  Mesh.ixx  PipelineBuilder.cpp  PipelineBuilder.ixx  RenderObject.ixx  Renderer.cpp  Renderer.ixx  Texture.cpp  Texture.ixx  Vertex.ixx  VertexLayout.ixx
buildtools/: Dockerfile  Install-Dependencies.ps1  Run-CMake.ps1
glad/include/glad/: glad.h
glad/src/: glad.c
resources/fonts/: ArialAtlas.json
resources/objects/: tree_with_material.mtl
resources/shaders/: color_fs.txt  color_vs.txt  compile.bat  light_source.frag  light_source.vert  light_source_frag.spv  light_source_fs.txt  light_source_vert.spv  light_source_vs.txt  reflection_fs.txt  skybox_fs.txt  skybox_vs.txt  test.vert  texture_fs.txt  texture_vs.txt
